--- a/app/views/houses/index.html.erb
+++ b/app/views/houses/index.html.erb
@@ -1,5 +1,5 @@
 <hr>
-
+<div class="container-fluid-padding">
 <section class="jumbotron text-center">
     <div class="container">
       <h1>Your New Home Awaits!</h1>
@@ -29,5 +29,5 @@
         <% end %>
     </div>
 </div>
-
+</div>
 
