--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,11 @@
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-  </head>
+   </head>
+  
   
   <body>
+
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
       <a class="navbar-brand" href="/">Zillno</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,16 +48,7 @@
             </li> 
                
         </ul> 
-        <ul class="navbar-nav ml-auto">
-            <% else%>
-              <li class="nav-item active">
-                <%= link_to "Login", new_login_path, class: "nav-link" %>
-              </li>
-              <li class="nav-item active">
-                <%= link_to "Sign Up", new_user_path, class: "nav-link" %>
-              </li> 
-            <% end%>
-        </ul>
+    
         
          
    
@@ -63,6 +56,16 @@
       
           
       </div>
+          <ul class="nav justify-content-end">
+            <% else%>
+              <li class="navbar-nav navbar-right active">
+                <%= link_to "Login", new_login_path, class: "nav-link" %>
+              </li>
+              <li class="navbar-nav navbar-right active">
+                <%= link_to "Sign Up", new_user_path, class: "nav-link" %>
+              </li> 
+            <% end%>
+        </ul>
     </nav>
 
 
