--- a/app/views/agents/show.html.erb
+++ b/app/views/agents/show.html.erb
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="app/assets/stylesheets/agents.scss" />
+<body>
 <h1><%= @agent.full_name %></h1>
 <img src= <%=@agent.picture%> alt="agent picture" width="375" height="250"><br>
 <br>
@@ -25,3 +27,4 @@
 <% end %>
 <br>
 
+</body>
