--- a/app/views/homepage/home.html.erb
+++ b/app/views/homepage/home.html.erb
@@ -1,3 +1,5 @@
+ <hr>
+<hr>
 <div display: block;>
     
 
@@ -7,11 +9,12 @@
     <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
     <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
   </ol>
+  
   <div class="carousel-inner">
     <div class="carousel-item active">
       <%= image_tag("House_logo.png", class: "d-block w-100")%>
     </div>
-    <div class="container">
+    <div class="container-fluid padding">
           <div class="carousel-caption text-left">
             <% if session[:user_id] %>
             <% @user = User.find(session[:user_id]) %>
@@ -37,6 +40,7 @@
 
 
   <div class="container marketing">
+
 
     <!-- START THE FEATURETTES -->
 
@@ -83,5 +87,3 @@
     <hr class="featurette-divider">
 
     <!-- /END THE FEATURETTES -->
-
-  </div>
