--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,10 @@
  *= require_tree .
  *= require_self
  */
- html,body{
-    height: 100%
+ 
+.navbar {
+    padding: .8rem;
+}
+.navbar-nav li {
+    padding-right: 20px
 }
