--- a/app/views/houses/index.html.erb
+++ b/app/views/houses/index.html.erb
@@ -1,5 +1,6 @@
+<html>
+<body>
 <hr>
-
 <section class="jumbotron text-center">
     <div class="container">
       <h1>Your New Home Awaits!</h1>
@@ -10,24 +11,27 @@
     </div>
   </section>
 
-<div class="container">
-    <div class="row row-cols-1 row-cols-md-3">
+<div class="container-fluid padding">
+    <div class="row padding">
         <% @houses.each do |house|%>
-        <div class="col-md-4">
-            <div class="card h-100">
+        <div class="col-md-3" >
+            <div class="card">
                 <% if house.picture.blank?%>
                     <%= link_to image_tag("no_image_found_house.png", class: 'card-img-top', size: "375x250"), house_path(house)%>
                 <% else%>
-                    <%= link_to image_tag(house.picture, class: 'card-img-top', size: "300x250"), house_path(house) %>
+                    <%= link_to image_tag(house.picture, :size=> '250x350', class: 'card-img-top'), house_path(house) %>
                 <% end %>
             <div class="card-body">
                 <h5 class="card-title"> <%= house.address %> </h5>
                 <p class="card-text">Beds: <%= house.bedrooms %> |  Baths: <%= house.bathrooms %> <br>Price: $<%= number_with_delimiter(house.price, :delimiter => ',') %></p>
+                <%= link_to "See Listing", house_path(house), class: "btn btn-outline-secondary" %>
             </div>
             </div>  
         </div>
         <% end %>
     </div>
 </div>
+</html>
+</body>
 
 
