--- a/app/views/houses/show.html.erb
+++ b/app/views/houses/show.html.erb
@@ -1,3 +1,5 @@
+ <hr>
+<hr>
 <div class="container">
 <h1><%= @house.address %></h1>
 <% if @current_user.id == @house.seller.id%>
@@ -31,6 +33,12 @@ $<%= number_with_delimiter(@house.price, :delimiter => ',') %><br>
 <h3>Description:</h3>
 <%= @house.description %><br>
 
+<figure>
+    <div class="fixed-wrap">
+        <div id="fixed">
+        </div>
+    </div>
+</figure>
  
 
 
