--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
     <% if @user.img_url.blank?%>
         <%= image_tag "profile_pic.png" %>
     <% else%>
-        <img src=<%= @user.img_url%> alt="" class="img-rounded"><br>
+        <%= image_tag(@user.img_url, class: "img-rounded", size: "475x350") %>
     <% end %><br>
     </div>
     <div class="col-md-6 details">
