--- a/app/views/houses/new.html.erb
+++ b/app/views/houses/new.html.erb
@@ -6,7 +6,7 @@
         <img class="mb-4" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/Eo_circle_blue_white_letter-z.svg/1024px-Eo_circle_blue_white_letter-z.svg.png" alt="" width="72" height="72">
         <h1 class="h3 mb-3 font-weight-normal">List Your Home With Us!</h1>
         <%= form_for (@house) do |f| %>
-            <p><%= f.text_field :address, placeholder: "Name"  %></p>
+            <p><%= f.text_field :address, placeholder: "Address"  %></p>
 
             <p><%= f.number_field :price, placeholder: "Price"  %></p>
 
